--- a/src/app/features/admin-layout/content-management/content-management.component.html
+++ b/src/app/features/admin-layout/content-management/content-management.component.html
@@ -50,7 +50,7 @@
                                 <label for="background" class=" text-gray-800 px-1 flex justify-between">
                                     <span>Background Image</span>
                                     <span class="flex gap-2 items-center">
-                                        <span class="material-icons  {{toggles.background ? 'text-green-600':'text-gray-500'}}"> {{ toggles.background ? 'visibility':'visibility_off'}} </span> 
+                                        <!-- <span class="material-icons  {{toggles.background ? 'text-green-600':'text-gray-500'}}"> {{ toggles.background ? 'visibility':'visibility_off'}} </span>  -->
                                         <app-toggle body="w-10 h-5" knob="w-3 h-3" translate="translate-x-5" [(isActive)]="toggles.background"></app-toggle>
                                     </span>
                                 </label>
