--- a/src/styles.css
+++ b/src/styles.css
@@ -36,15 +36,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 @keyframes scroll {
   0% {
-    transform: translateX(100%);
+    transform: translateX(0%);
   }
   100% {
-    transform: translateX(-100%);
+    transform: translateX(-50%);
   }
 }
 
-.animate-scroll {
-  animation: scroll 20s linear infinite;
+.animate-scroll-tailing {
+  animation: scroll 10s linear infinite;
   white-space: nowrap;
 }
 
