--- a/src/app/features/queueing-layout/queue-display/queue-display.component.html
+++ b/src/app/features/queueing-layout/queue-display/queue-display.component.html
@@ -28,33 +28,36 @@
           <h2 
           [ngStyle]="{'color': colors.primary_text}"
           class="font-medium text-lg 2xl:text-2xl tracking-widest px-2 min-[3500px]:font-semibold min-[3500px]:px-4 min-[3500px]:text-8xl" >Serving Now:</h2>
-          <div class="flex-1 grid grid-cols-2 grid-rows-5   gap-2 min-[3500px]:gap-5">
+          <div class="flex-1 grid grid-cols-2 grid-rows-5 grid-flow-col   gap-2 min-[3500px]:gap-5">
             <!-- Counter -->
-            <div *ngFor="let item of counters;let i = index" 
-            [ngStyle]="{
-              'border-color': colors.primary_text + '80',
-            }"
-            class="h-full rounded-lg shadow-lg flex overflow-hidden border-dashed border-2  min-[3500px]:rounded-3xl min-[3500px]:border-8">
+            <ng-container *ngFor="let item of counters;let i = index" >
               <div 
               [ngStyle]="{
-                'backgroundColor': colors.tertiary_bg,
-                'color': colors.primary_text
+                'border-color': colors.primary_text + '80',
               }"
-              class="w-1/4 px-3 flex flex-col items-center justify-center font-medium text-2xl 2xl:text-2xl  shadow-sm text-shadow tracking-wide  min-[3500px]:text-8xl min-[3500px]:px-10 min-[3500px]:font-semibold ">
-                <span class="text-[0.5rem] leading-none min-[3500px]:text-2xl">COUNTER</span>
-                <span>{{item.label}}</span>
+              class="h-full rounded-lg shadow-lg flex overflow-hidden border-dashed border-2  min-[3500px]:rounded-3xl min-[3500px]:border-8">
+                <div 
+                [ngStyle]="{
+                  'backgroundColor': colors.tertiary_bg,
+                  'color': colors.primary_text
+                }"
+                class="w-1/4 px-3 flex flex-col items-center justify-center font-medium text-2xl 2xl:text-2xl  shadow-sm text-shadow tracking-wide  min-[3500px]:text-8xl min-[3500px]:px-10 min-[3500px]:font-semibold ">
+                  <span class="text-[0.5rem] leading-none min-[3500px]:text-2xl" >COUNTER</span>
+                  <span>{{i+1}}</span>
+                </div>
+                <div 
+                [ngStyle]="{
+                  'backgroundColor': colors.secondary_bg,
+                  'color': colors.secondary_text
+                }"
+                class="w-full flex-1 flex justify-center px-3 items-center min-[3500px]:px-10 ">
+                  <span class=" tracking-wide text-lg 2xl:text-xl font-medium text-shadow min-[3500px]:text-8xl min-[3500px]:font-semibold">{{item.ticketNumber}}</span>
+                  <!-- <span class="tracking-wide text-xs 2xl:text-sm text-shadow min-[3500px]:text-5xl min-[3500px]:font-medium">{{item.personName}}</span> -->
+                </div>
               </div>
-              <div 
-              [ngStyle]="{
-                'backgroundColor': colors.secondary_bg,
-                'color': colors.secondary_text
-              }"
-              class="w-full flex-1 flex justify-center px-3 items-center min-[3500px]:px-10 ">
-                <span class=" tracking-wide text-lg 2xl:text-xl font-medium text-shadow min-[3500px]:text-8xl min-[3500px]:font-semibold">{{item.ticketNumber}}</span>
-                <!-- <span class="tracking-wide text-xs 2xl:text-sm text-shadow min-[3500px]:text-5xl min-[3500px]:font-medium">{{item.personName}}</span> -->
-              </div>
-            </div>
-           
+              <div *ngFor="let filler of computeFillers(i+1,counters.length)" class="w-full h-full"></div>
+            </ng-container>
+            
 
           </div>
         </div>
